devops/deploy_yamls/dev/k8s/kkfileview-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kkfileview-dev
  namespace: education-dev
  labels:
    app: kkfileview
    release: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kkfileview
      release: dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kkfileview
        release: dev
    spec:
      nodeSelector:
        education: "true"
      containers:
        - name: kkfileview
          image: keking/kkfileview:latest
          ports:
            - name: tcp-essential
              containerPort: 8012
              protocol: TCP
