devops/deploy_yamls/dev/k8s/server-gateway-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-gateway-dev
  namespace: education-dev
  labels:
    app: server-gateway
    release: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-gateway
      release: dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: server-gateway
        release: dev
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: server-gateway
          resources:
            limits:
              cpu: 500m
              memory: 2G
          image: core.harbor.cz.shenlan.com/dbp-edu/server-gateway:latest
          ports:
            - name: tcp-essential
              containerPort: 8001
              protocol: TCP
          readinessProbe:
            httpGet:
              port: tcp-essential
              path: /actuator/health
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 20"]
