devops/deploy_yamls/dev/k8s/service-dict-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-dict-dev
  namespace: education-dev
  labels:
    app: service-dict
    release: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-dict
      release: dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: service-dict
        release: dev
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: service-dict
          image: core.harbor.cz.shenlan.com/dbp-edu/service-dict:latest
          resources:
            limits:
              cpu: 500m
              memory: 2G

          ports:
            - name: tcp-essential
              containerPort: 6002
              protocol: TCP
          readinessProbe:
            httpGet:
              port: tcp-essential
              path: /actuator/health
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 20"]
