devops/deploy_yamls/dev/k8s/terminal-student-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal-student-dev
  namespace: education-dev
  labels:
    app: terminal-student
    release: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal-student
      release: dev
  template:
    metadata:
      labels:
        app: terminal-student
        release: dev
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: terminal-student
          image: core.harbor.cz.shenlan.com/dbp-edu/terminal-student:latest
          ports:
            - name: tcp-essential
              containerPort: 8000
              protocol: TCP
