devops/deploy_yamls/dev/k8s/ingress-dev-edu-student.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-dev-edu-student
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - hosts:
        - dev-edu-student.deepblueai.com
      secretName: deepblueai-tls
  rules:
    - host: dev-edu-student.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: terminal-student
              servicePort: 8000
